# kdm

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: rut.cmake
include/: kdm.h  log.h
src/: kdm.c  log.c  main.c
